fixed footer overlapping

--- a/footer.css
+++ b/footer.css
@@ -1,6 +1,6 @@
 html{
     height:100%;
-    --footer_height : 80px;
+    --footer_height : 60px;
 
 }
 body{
@@ -11,8 +11,11 @@ body{
 .footer{
     position: fixed;
     bottom:0;
-    height: 80px; 
-    background-color: rgba(46, 46, 46, 0.616);
+    height: 5%; 
+    display: flex;
+    justify-content: center;
+    align-items:center;
+    background-color: rgba(0, 0, 0, 0.616);
     z-index: 200;
     min-width: 100%;
 }
@@ -33,21 +36,22 @@ body{
   
   .social-media{
     margin: 20px 0;
+    display : flex;
+    justify-content: center;
+    justify-content: center;
+
   }
   
   .social-media a{
     color: #ffffff;  
     margin-right: 25px;
-    font-size: 40px;
-    letter-spacing: 30px;
+    font-size: 25px;
+    /* letter-spacing:5px; */
     text-decoration: none;
     transition: .3s linear;
   }
   .social-media{
-    /* position:relative;
-    top:50%;
-    left:50%; */
-    /* transform: translate(-50%,-50%);    */
+    
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -62,7 +66,7 @@ body{
   }
   
   .social-media a:nth-of-type(2):hover{
-    color: #8a3ab9;
+    color: #E23569;
   }
 
   
