--- a/styles.css
+++ b/styles.css
@@ -270,7 +270,7 @@ nav a:focus {
       /* font-family : "Roboto Condensed", sans-serif; */
       font-family :  'Segoe UI', sans-serif;
       color : white;
-      font-size : 3em;
+      font-size : 3.4em;
       width : 100vw;
       top:0%;
       position: absolute;
@@ -697,7 +697,7 @@ nav a:focus {
   }
   .sub{
     margin-top : 15px;
-    margin-bottom:20px;
+    margin-bottom:15px ;
   }
   .active::before{
     max-width:100%;
@@ -779,11 +779,9 @@ nav a:focus {
     max-width:100%;
   }
   .wrapper .card:nth-of-type(4){
-    /* padding-bottom: 20px; */
-    margin-bottom: 20px;
-   
-  
+    margin-bottom: 50px;
   }
+  
 }
 
 #about{
